added functionality to input station data file and output name and temp for specific date

--- a/data/datasmall.ipynb
+++ b/data/datasmall.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "id": "442cf842-ffdf-4ce4-b6e7-8113f5d10fd5",
    "metadata": {},
    "outputs": [],
@@ -1358,11 +1358,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "888bd7fb-a8ed-4979-83df-29866b43508f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name:    TG, dtype: int64)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df[\"    DATE\"] == \"1806-01-01\"]['   TG'].squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "91b3dc93-7d1c-4673-a02e-5b21dcbd421f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df[\"    DATE\"] == \"1860-01-05\"]['   TG'].squeeze()"
+   ]
   }
  ],
  "metadata": {
